[gd_scene load_steps=29 format=2]

[ext_resource path="res://script/swordler.gd" type="Script" id=1]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot2.png" type="Texture" id=2]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot1.png" type="Texture" id=3]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot3.png" type="Texture" id=4]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot20.png" type="Texture" id=5]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot22.png" type="Texture" id=6]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot25.png" type="Texture" id=7]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot23.png" type="Texture" id=8]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot21.png" type="Texture" id=9]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot13.png" type="Texture" id=10]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot15.png" type="Texture" id=11]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot17.png" type="Texture" id=12]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot14.png" type="Texture" id=13]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot18.png" type="Texture" id=14]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot16.png" type="Texture" id=15]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot19.png" type="Texture" id=16]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot11.png" type="Texture" id=17]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot12.png" type="Texture" id=18]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot10.png" type="Texture" id=19]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot24.png" type="Texture" id=20]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot7.png" type="Texture" id=21]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot9.png" type="Texture" id=22]
[ext_resource path="res://swordler_alpha_sprites/swordler_alpha_godot8.png" type="Texture" id=23]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.39677, 2.96085 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.03125, 3.42202 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.03395, 3.41404 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "sliding",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 12 ) ],
"loop": true,
"name": "flipping",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 20 ) ],
"loop": true,
"name": "pounding",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 16 ) ],
"loop": true,
"name": "wall sliding",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "diving",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 19 ) ],
"loop": true,
"name": "running",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "falling",
"speed": 5.0
} ]

[node name="swordler" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -9.75
margin_top = -9.6875
margin_right = 10.25
margin_bottom = 10.3125
__meta__ = {
"_edit_use_anchors_": false
}

[node name="groundcheck" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="groundcheck"]
position = Vector2( 0, 10.3125 )
shape = SubResource( 2 )

[node name="buffer" type="Timer" parent="."]
wait_time = 4096.0
one_shot = true

[node name="sliding" type="ColorRect" parent="."]
margin_left = -21.6145
margin_top = -48.5085
margin_right = -16.6145
margin_bottom = -33.5085
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flipping" type="ColorRect" parent="."]
margin_left = -2.71268
margin_top = -49.4644
margin_right = 2.28732
margin_bottom = -33.4644
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leap" type="ColorRect" parent="."]
margin_left = 16.2182
margin_top = -49.4644
margin_right = 21.2182
margin_bottom = -34.4644
__meta__ = {
"_edit_use_anchors_": false
}

[node name="disable_groundpound" type="Timer" parent="."]
wait_time = 0.165
one_shot = true

[node name="leftwalldect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftwalldect"]
position = Vector2( -10, -6 )
shape = SubResource( 3 )

[node name="rightwalldect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightwalldect"]
position = Vector2( 10, -6 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.164063, 0 )
scale = Vector2( 0.615007, 0.628913 )
frames = SubResource( 5 )
animation = "flipping"
frame = 4
playing = true

[node name="cyote" type="Timer" parent="."]
wait_time = 0.012
one_shot = true
[connection signal="body_entered" from="groundcheck" to="." method="_on_groundcheck_body_entered"]
[connection signal="timeout" from="buffer" to="." method="_on_buffer_timeout"]
[connection signal="timeout" from="disable_groundpound" to="." method="_on_disable_groundpound_timeout"]
[connection signal="body_shape_entered" from="leftwalldect" to="." method="_on_leftwalldect_body_shape_entered"]
[connection signal="body_shape_entered" from="rightwalldect" to="." method="_on_rightwalldect_body_shape_entered"]
[connection signal="timeout" from="cyote" to="." method="_on_cyote_timeout"]
